crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@unexpected_struct_literal.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n    let a: I32 = { a: 10 }\n}"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/unexpected_struct_literal.au
---
Error: Type mismatch
   ╭─[ main:2:18 ]
   │
 2 │     let a: I32 = { a: 10 }
   │                  ────┬────  
   │                      ╰────── Expected `I32`, but got `{ a: 10 }`
───╯
